--- a/index.html
+++ b/index.html
@@ -5,50 +5,92 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Condensed&display=swap" rel="stylesheet">
     <title>Workshop</title>
 </head>
 <body>
-
-<!-- color boxes (eventually) -->
-<div class="colors">
-    <div class="lime"></div>
-    <div class="magenta"></div>
-    <div class="magenta50"></div>
-    <div class="white"></div>
-    <div class="tan"></div>
-    <div class="teal"></div>
-    <div class="cyan"></div>
-    <div class="black"></div>
-</div>
-  
-  <!-- type -->
-  <h1>This is Heading 1</h1>
-  <h2>This is Heading 2</h2>
-  <h3>This is Heading 3</h3>
-  <h4>This is Heading 4</h4>
-  <h5>This is Heading 5</h5>
-  <h6>This is Heading 6</h6>
-  <p>This is a paragraph. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam, pariatur.</p>
-  <a href="#">A text link by itself</a>
-  <ul>
-    <li>This is an unordered list.</li>
-    <li>Second thing.</li>
-    <li>Third thing.</li>
-  </ul>
-  <strong>Strongly emphasized text</strong>
-  <ol>
-    <li>This is an ordered list.</li>
-    <li>Second thing.</li>
-    <li>Third thing.</li>
-  </ol>
-  <em>Emphasized text</em>
-  <blockquote>
-    <p>A paragraph inside of a blockquote, said by a famous person.</p>
-  </blockquote>
-  
-  <figure>
-    <img src="https://assets.codepen.io/296057/fem-blindfold-475.jpg" alt="The three men of Magenta Lime, blindfolded." />
-    <figcaption>Magenta Lime will rock your world.</figcaption>
-  </figure>
+    <div class="wrapper">
+        <header>
+            <a href="#">
+                <img src="https://assets.codepen.io/296057/fem-maglime-logo.svg" alt="Magenta Lime. Clique para ir para a Home">
+            </a>
+        </header>
+    
+        <div class="banner"><img src="https://assets.codepen.io/296057/fem-blindfold-475.jpg" alt="3 membros Magenta Lime"></div>
+    
+        <main>
+            <h1 class="h3">Tour</h1>
+            <p><span class="date">31 July 2023</span><br>
+              <span class="club">The IVY</span><br>
+              Oakheart, CA
+            </p>
+            <p><span class="date">02 August 2023</span><br>
+              <span class="club">Club Ecstasy</span><br>
+              Longdale, CA
+            </p>
+            <p><span class="date">08 August 2023</span><br>
+              <span class="club">The Summit</span><br>
+              Carran, OR
+            </p>
+            <p><span class="date">10 August 2023</span><br>
+              <span class="club">Empire</span><br>
+              Goldenleaf, CA
+            </p>
+            <p><span class="date">18 August 2023</span><br>
+              <span class="club">The Thunder</span><br>
+              Stathford, OR
+            </p>
+            <p><span class="date">06 September 2023</span><br>
+              <span class="club">The Gate</span><br>
+              Monmouth, WA
+            </p>
+            <p><span class="date">11 September 2023</span><br>
+              <span class="club">Horizon</span><br>
+              Colkirk, WA</span>
+            </p>
+        </main>
+        <aside>
+            <div class="imggroup">
+              <img src="https://assets.codepen.io/296057/fem-purple-arms.jpg" alt="Purple stage and excited crowd." />
+              <figure>
+                <blockquote>Just WOW<br>
+                  <img src="https://assets.codepen.io/296057/fem-star.svg" alt="Four star rating." class="star" />
+                  <img src="https://assets.codepen.io/296057/fem-star.svg" alt="" class="star" />
+                  <img src="https://assets.codepen.io/296057/fem-star.svg" alt="" class="star" />
+                  <img src="https://assets.codepen.io/296057/fem-star.svg" alt="" class="star" />
+                </blockquote>
+                <figcaption><cite>The Staple</cite></figcaption>
+              </figure>
+            </div>
+            <div class="imggroup">
+              <img src="https://assets.codepen.io/296057/fem-fireworks.jpg" alt="Red stage with fireworks and excited crowd." />
+              <figure>
+                <blockquote>Best. Album. Ever.<br>
+                  <img src="https://assets.codepen.io/296057/fem-star.svg" alt="Four star rating." class="star" />
+                  <img src="https://assets.codepen.io/296057/fem-star.svg" alt="" class="star" />
+                  <img src="https://assets.codepen.io/296057/fem-star.svg" alt="" class="star" />
+                  <img src="https://assets.codepen.io/296057/fem-star.svg" alt="" class="star" />
+                </blockquote>
+                <figcaption><cite>Gold Spin</cite></figcaption>
+              </figure>
+            </div>
+            <div class="imggroup">
+              <img src="https://assets.codepen.io/296057/fem-blue-arms.jpg" alt="Blue smoky stage and crowd with person raising arms." />
+              <figure>
+                <blockquote>I can't stop listening<br>
+                  <img src="https://assets.codepen.io/296057/fem-star.svg" alt="Four star rating." class="star" />
+                  <img src="https://assets.codepen.io/296057/fem-star.svg" alt="" class="star" />
+                  <img src="https://assets.codepen.io/296057/fem-star.svg" alt="" class="star" />
+                  <img src="https://assets.codepen.io/296057/fem-star.svg" alt="" class="star" />
+                </blockquote>
+                <figcaption><cite>Draft Media</cite></figcaption>
+              </figure>
+            </div>
+          </aside>
+          <footer>
+            <p><a href="#">Contact</a></p>
+            <p>&copy; 2023 Magenta Lime</p>
+          </footer>
+    </div>
 </body>
 </html>
