--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
             </a>
         </header>
     
-        <div class="banner"><img src="https://assets.codepen.io/296057/fem-blindfold-475.jpg" alt="3 membros Magenta Lime"></div>
+        <div class="banner">
+            <picture>
+                <source srcset="https://assets.codepen.io/296057/fem-blindfold-1200.jpg" media="(min-width:800px)">
+                <img src="https://assets.codepen.io/296057/fem-blindfold-475.jpg" alt="3 membros Magenta Lime">
+            </picture>
+        </div>
     
         <main>
             <h1 class="h3">Tour</h1>
