--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     
         <div class="banner">
             <picture>
-                <source srcset="https://assets.codepen.io/296057/fem-blindfold-1200.jpg" media="(min-width:800px)">
-                <img src="https://assets.codepen.io/296057/fem-blindfold-475.jpg" alt="3 membros Magenta Lime">
+                <source srcset="./assets/Vacationer_02.jpg" media="(min-width:800px)">
+                <img src="./assets/Vacationer_02.jpg" alt="3 membros Magenta Lime">
             </picture>
         </div>
     
