--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Condensed&display=swap" rel="stylesheet">
     <title>VACATIONER</title>
     <link rel="shortcut icon" type="image/x-icon" href="https://images.squarespace-cdn.com/content/v1/5a9edcf55b409b307ee547d4/1525372133983-67G67TEYARUH03AG52NM/favicon.ico?format=100w">
@@ -71,7 +71,7 @@
           <p><a href="#">Contact</a></p>
           <p>&copy; 2023 Magenta Lime</p>
         </footer>
-        <script src="./index.js"></script>
+        <script src="./index.min.js"></script>
     </div>
 </body>
 </html>
